# tortoise-prepared-benchmarks

./: README.md  bench.sh  generate_charts.py  pyproject.toml
bench/: __main__.py  main.py  models.py  utils.py
bench/common/: prepare_a.py  prepare_b.py  prepare_c.py  prepare_e.py  prepare_f.py  prepare_g.py
bench/compiled_queries/: __init__.py  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  test_f.py  test_g.py
bench/prepared_queries/: __init__.py  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  test_f.py  test_g.py
bench/regular_queries/: __init__.py  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  test_f.py  test_g.py
